@@ -7,6 +7,10 @@
   * include/urjtag/parse.h (urj_parse_line): Constify the "line" argument.
   * src/global/parse.c (urj_parse_line): Likewise.
 
+  * configure.ac: Check for getline().
+  * src/global/parse.c (urj_parse_stream): Get rid of line length limitations
+  by using getline when it is available.
+
 2011-02-17  Mike Frysinger  <vapier@gentoo.org>
 
   * data/analog/bf548/STEPPINGS: Add bf54x-0.4 support.
